@@ -19,8 +19,18 @@ ext {
 dependencies {
 	implementation 'org.springframework.shell:spring-shell-starter'
 	implementation 'commons-io:commons-io:2.11.0'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.eclipse.jgit:org.eclipse.jgit:5.12.0.202106070339-r'
 
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.awaitility:awaitility'
+	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.0'
+
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 
 }
 
@@ -32,4 +42,8 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+test {
+	jvmArgs '--illegal-access=permit'
 }
